add physics to render with renderer preview

--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -4,6 +4,7 @@
 <script src="/js/lodash.min.js"></script>
 <script src="/js/knockout.min.js"></script>
 <script src="/js/keymaster.min.js"></script>
+<script src="/js/box2dweb-rope.js"></script>
 <script src="/js/googly.js"></script>
 <script src="/js/edit.js"></script>
 <link rel="stylesheet" href="/css/style.css" />
