--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,15 +1,6 @@
-<html>
-<head>
-<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-<script src="/js/lodash.min.js"></script>
-<script src="/js/knockout.min.js"></script>
-<script src="/js/keymaster.min.js"></script>
-<script src="/js/box2dweb-rope.js"></script>
-<script src="/js/googly.js"></script>
+<% layout("layout") -%>
+
 <script src="/js/edit.js"></script>
-<link rel="stylesheet" href="/css/style.css" />
-</head>
-<body>
 
 <div id="editor" class="editor">
   Frames: <%= gif.frames.length %><br />
@@ -26,26 +17,23 @@
     <button data-bind="click: $parent.makeMeAKeyframe, visible: !keyframe()">make keyframe</button>
     <button data-bind="click: $parent.makeMeATween, visible: ($parent.canBeTweened && (keyframe() || !visible()))">make tween</button>
     <button data-bind="click: $parent.makeMeNotATween, visible: (!keyframe() && visible())">remove tween</button>
+    <button class="save-button" data-bind="click: save">save</button>
   </div>
-  <div class="canvas-holder" data-bind="style: {width: width, height: height}">
+  <div class="canvas-holder editor-block" data-bind="style: {width: width, height: height}">
     <img data-bind="attr: {src: img}, style: {width: width, height: height}" />
     <canvas class="editor-canvas" data-bind="style: {width: width, height: height, 'margin-top': -height()}, event: {dblclick: addEyes}"></canvas>
   </div>
   
-  <div data-bind="with: currentFrame, visible: currentFrame().keyframe">
+  <div class="editor-block" data-bind="with: currentFrame, visible: currentFrame().keyframe">
     <p>Size: <input class="gap" type="range" min="0.01" max="0.4" step="0.005" data-bind="value: size" /> <span class="show-size" data-bind="text: size"></span></p>
     <p>Gap: <input class="gap" type="range" min="1" max="5" step="0.01" data-bind="value: gap" /> <span class="show-gap" data-bind="text: gap"></span></p>
     <p>Rotate Z: <input class="rz" type="range" min="-90" max="90" step="5" data-bind="value: rz" /> <span class="show-rz" data-bind="text: rz"></span></p>
     <p>Rotate Y: <input class="ry" type="range" min="-90" max="90" step="5" data-bind="value: ry" /> <span class="show-ry" data-bind="text: ry"></span></p>
     <p>Rotate X: <input class="rx" type="range" min="-90" max="90" step="5" data-bind="value: rx" /> <span class="show-rx" data-bind="text: rx"></span></p>
   </div>
-  <button data-bind="click: save">save</button>
 </div>
 <script>
 var _id = "<%= _id %>";
 var _key = "<%= _key %>";
 setupGif(<%- JSON.stringify(gif) %>);
 </script>
-
-</body>
-</html>
