--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,20 +1,22 @@
 <html>
 <head>
 <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-<script src="/js/jquery-ui-1.10.3.custom.min.js"></script>
-<script src="/js/jquery.ui.touch-punch.min.js"></script>
-<script src="/js/bootstrap.min.js"></script>
-<script src="/js/bootstrap-select.js"></script>
-<script src="/js/bootstrap-switch.js"></script>
-<script src="/js/flatui-checkbox.js"></script>
-<script src="/js/flatui-radio.js"></script>
-<script src="/js/jquery.tagsinput.js"></script>
-<script src="/js/jquery.placeholder.js"></script>
-<script src="/js/lodash.min.js"></script>
-<script src="/js/knockout.min.js"></script>
-<script src="/js/keymaster.min.js"></script>
-<script src="/js/box2dweb-rope.js"></script>
+<script src="/js/lib/jquery-ui-1.10.3.custom.min.js"></script>
+<script src="/js/lib/jquery.ui.touch-punch.min.js"></script>
+<script src="/js/lib/jquery.tagsinput.js"></script>
+<script src="/js/lib/jquery.placeholder.js"></script>
+<script src="/js/lib/bootstrap.min.js"></script>
+<script src="/js/lib/bootstrap-select.js"></script>
+<script src="/js/lib/bootstrap-switch.js"></script>
+<script src="/js/lib/flatui-checkbox.js"></script>
+<script src="/js/lib/flatui-radio.js"></script>
+<script src="/js/lib/lodash.min.js"></script>
+<script src="/js/lib/knockout.min.js"></script>
+<script src="/js/lib/keymaster.min.js"></script>
+<script src="/socket.io/socket.io.js"></script>
+<script src="/js/lib/box2dweb-rope.js"></script>
 <script src="/js/googly.js"></script>
+<script src="/js/app.js"></script>
 
 
 <link rel="stylesheet" href="/css/bootstrap.min.css" />
@@ -23,8 +25,9 @@
 </head>
 <body>
   <div class="container container-header">
-    <a href="/"><img src="/images/logo.png" /></a>
-    <div class="caption">
+    <a href="/" class="logo hidden-xs hidden-sm"><img src="/images/logo.png" /></a>
+    <a href="/" class="logo visible-xs visible-sm"><img src="/images/logo.png" style="width: 100%;" /></a>
+    <div class="caption hidden-xs">
       <h2>FINALLY</h2>
       <p>
         Googly Eyes as a Service
