better error pages

--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,3 +1,6 @@
 <% layout("layout") -%>
 
-<h1>404 not found</h1>
+<div class="container-block clearfix">
+  <h1>404 not found</h1>
+  <img src="http://googlyify.s3.amazonaws.com/A1VeV_KIH/render.gif" />
+</div>
