--- a/views/500.ejs
+++ b/views/500.ejs
@@ -1,3 +1,7 @@
 <% layout("layout") -%>
 
-<h1>Error 500</h1>
+<div class="container-block clearfix">
+  <h1>ERROR</h1>
+  <h3>Something really bad happened</h3>
+  <img src="http://googlyify.s3.amazonaws.com/A1VeV_KIH/render.gif" />
+</div>
