fix edit page buttons

--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -3,8 +3,8 @@
 <script src="/js/edit.js"></script>
 
 <div id="editor" class="editor container-block clearfix">
-  <button class="btn btn-danger btn-lg btn-header render-button" data-bind="click: render">render</button>
-  <button class="btn btn-info btn-lg btn-header save-button" data-bind="click: save">save</button>
+  <button class="btn btn-danger btn-lg btn-header render-button" data-bind="click: renderClicked">render</button>
+  <button class="btn btn-info btn-lg btn-header save-button" data-bind="click: saveClicked">save</button>
   <h1>Editor</h1>
   <div class="clearfix">
     <div class="canvas-holder editor-block" data-bind="style: {width: width, height: height}">
