--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,22 +3,36 @@
 <div class="row demo-tiles">
   <div class="col-sm-3">
     <div class="tile">
-      stuff
+      <img src="/images/dogehead.png">
+      <div style="min-height: 2.4em;">
+        <h4 style="margin: 0;">such handsome</h4>
+      </div>
     </div>
   </div>
   <div class="col-sm-3">
     <div class="tile">
-      stuff
+      <img src="/images/question.png">
+      <div style="min-height: 2.4em;">
+        <h4 style="margin: 0;">made better?</h4>
+      </div>
     </div>
   </div>
   <div class="col-sm-3">
     <div class="tile">
-      stuff
+      <img src="/images/dogeheadeyes.png">
+      <div style="min-height: 2.4em;">
+        <h4 style="margin: 0;">so googly</h4>
+      </div>
     </div>
   </div>
   <div class="col-sm-3">
     <div class="tile">
-      stuff
+      <div style="min-height: 233px;">
+        <img src="http://googlyify.s3.amazonaws.com/AHWU3GHY1/render.gif" style="margin-top: 2em;width: 100%;">
+      </div>
+      <div style="min-height: 2.4em;">
+        <h3 style="margin: 0;">wow</h3>
+      </div>
     </div>
   </div>
 </div>
