--- a/views/show.ejs
+++ b/views/show.ejs
@@ -2,5 +2,11 @@
 
 <div class="container-block clearfix" style="padding-bottom: 2em; text-align: center;">
   <h1>wow nice gif</h1>
-  <img src="http://googlyify.s3.amazonaws.com/<%= _id %>/render.gif" />
+  <div>
+    <img src="http://googlyify.s3.amazonaws.com/<%= _id %>/render.gif" />
+  </div>
+  <div>
+    <div class="fui-eye">&nbsp;<%= gif.views %> view<%= (gif.views == 1 ? "" : "s") %></div><br />
+    <button class="btn btn-danger fui-heart">&nbsp;&nbsp;<%= gif.likes %> like<%= (gif.likes == 1 ? "" : "s") %></button>
+  </div>
 </div>
