--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -25,14 +25,20 @@
 </head>
 <body>
   <div class="container container-header">
-    <a href="/" class="logo hidden-xs hidden-sm"><img src="/images/logo.png" /></a>
-    <a href="/" class="logo visible-xs visible-sm"><img src="/images/logo.png" style="width: 100%;" /></a>
-    <div class="caption hidden-xs">
-      <h2>FINALLY</h2>
-      <p>
-        Googly Eyes as a Service
-      </p>
-      <iframe src="http://nodeknockout.com/iframe/googlyify" frameborder=0 scrolling=no allowtransparency=true width=115 height=25></iframe>
+    <div class="row">
+      <div class="col-md-9">
+        <a href="/" class="logo hidden-xs hidden-sm"><img src="/images/logo.png" /></a>
+        <a href="/" class="logo visible-xs visible-sm"><img src="/images/logo.png" style="width: 100%;" /></a>
+      </div>
+      <div class="col-md-3 hidden-xs">
+        <div class="caption tile">
+          <h2>FINALLY</h2>
+          <p>
+            Googly Eyes as a Service
+          </p>
+          <iframe src="http://nodeknockout.com/iframe/googlyify" frameborder=0 scrolling=no allowtransparency=true width=115 height=25></iframe>
+        </div>
+      </div>
     </div>
   </div>
   <div class="container container-body">
