--- a/public/css/style.css
+++ b/public/css/style.css
@@ -34,15 +34,15 @@ h1, h2, h3, h4 {
 }
 
 .container-header .caption {
-  float: right;
-  text-align: center;
-  background-color: #ECF0F1;
-  border-radius: 0.5em;
-  margin: 0;
-  padding: 0 1em 1em 1em;
+  -x-float: right;
+  -x-text-align: center;
+  -x-background-color: #ECF0F1;
+  -x-border-radius: 0.5em;
+  -x-margin: 0;
+  -x-padding: 0 1em 1em 1em;
 }
 .container-header .caption h2 {
-  margin: 0.4em 0 0 0;
+  margin: 0.1em 0 0 0;
   line-height: 80%;
 }
 .container-header .caption p {
@@ -134,6 +134,13 @@ h1, h2, h3, h4 {
   display: block;
 }
 
+.top-gif-holder {
+  min-height: 12em;
+}
+.top-gif {
+  max-width: 100%;
+  margin-top: 1em;
+}
 
 
 .form-control:focus {
