--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -30,7 +30,7 @@
         <a href="/" class="logo hidden-xs hidden-sm"><img src="/images/logo.png" /></a>
         <a href="/" class="logo visible-xs visible-sm"><img src="/images/logo.png" style="width: 100%;" /></a>
       </div>
-      <div class="col-md-3 hidden-xs">
+      <div class="col-md-3 hidden-sm hidden-xs">
         <div class="caption tile">
           <h2>FINALLY</h2>
           <p>
