save/render bug

--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -3,6 +3,7 @@
 <script src="/js/edit.js"></script>
 
 <div id="editor" class="editor container-block clearfix">
+  <div id="message" class="alert alert-success" style="display: none;"></div>
   <button class="btn btn-danger btn-lg btn-header render-button" data-bind="click: renderClicked">render</button>
   <button class="btn btn-info btn-lg btn-header save-button" data-bind="click: saveClicked">save</button>
   <h1>Editor</h1>
