--- a/views/index.ejs
+++ b/views/index.ejs
@@ -53,64 +53,72 @@
   </div>
 </div>
 
+<script type="text/template" id="gif-tile-template">
+  <div class="tile">
+    <div class="top-gif-holder">
+      <a href="" class="top-gif-link">
+        <img src="" class="top-gif" />
+      </a>
+    </div>
+    <h4 class="wow-message"></h4>
+  </div>
+</script>
+
 <div class="top-gifs" style="margin-top: 1em; -x-display: none;">
+  <h3 style="color: #ECF0F1">Top GIFs</h3>
   <div class="row">
-    <div class="col-sm-3 top-gif-1">
-      <div class="tile">
-        <div class="top-gif-holder">
-          <a href="" class="top-gif-link">
-            <img src="" class="top-gif" />
-          </a>
-        </div>
-        <h4>nice gif</h4>
-      </div>
-    </div>
-    <div class="col-sm-3 top-gif-2">
-      <div class="tile">
-        <div class="top-gif-holder">
-          <a href="" class="top-gif-link">
-            <img src="" class="top-gif" />
-          </a>
-        </div>
-        <h4>such animate</h4>
-      </div>
-    </div>
-    <div class="col-sm-3 top-gif-3">
-      <div class="tile">
-        <div class="top-gif-holder">
-          <a href="" class="top-gif-link">
-            <img src="" class="top-gif" />
-          </a>
-        </div>
-        <h4>very googly</h4>
-      </div>
-    </div>
-    <div class="col-sm-3 top-gif-4">
-      <div class="tile">
-        <div class="top-gif-holder">
-          <a href="" class="top-gif-link">
-            <img src="" class="top-gif" />
-          </a>
-        </div>
-        <h4>wow</h4>
-      </div>
-    </div>
+  </div>
+</div>
+<div class="most-viewed-gifs" style="margin-top: 1em; -x-display: none;">
+  <h3 style="color: #ECF0F1">Most Views</h3>
+  <div class="row">
+  </div>
+</div>
+<div class="most-liked-gifs" style="margin-top: 1em; -x-display: none;">
+  <h3 style="color: #ECF0F1">Most Likes</h3>
+  <div class="row">
   </div>
 </div>
 
 <script>
+var m1 = ["wow", "very", "such", "nice", "many", "much"];
+var m2 = ["googly", "animate", "gif", "eyes"];
+function createGifTile (gif) {
+  var el = $("<div class='col-sm-3'>");
+  el.html($("#gif-tile-template").html());
+  $(".top-gif", el).attr({
+    src: "http://googlyify.s3.amazonaws.com/"+gif._id+"/render.gif"
+  });
+  $("a", el).attr({
+    href: "/show/"+gif._id
+  });
+  var msg = m1[Math.floor(Math.random()*m1.length)];
+  msg += " " + m2[Math.floor(Math.random()*m2.length)];
+  $(".wow-message", el).html(msg);
+  return el;
+}
 $.getJSON("/top.json", function (gifs) {
   for (var i=0; i<4 && i<gifs.length; i++) {
-    var el = $(".top-gif-"+(i+1));
-    $(".top-gif", el).attr({
-      src: "http://googlyify.s3.amazonaws.com/"+gifs[i]._id+"/render.gif"
-    });
-    $("a", el).attr({
-      href: "/show/"+gifs[i]._id
-    });
+    $(".top-gifs .row").append(createGifTile(gifs[i]));
   }
   if (gifs.length >= 4) {
     $(".top-gifs").show();
+  }
+});
+$.getJSON("/most/likes.json", function (gifs) {
+  for (var i=0; i<4 && i<gifs.length; i++) {
+    $(".most-liked-gifs .row").append(createGifTile(gifs[i]));
+  }
+  if (gifs.length >= 4) {
+    $(".most-liked-gifs").show();
+  }
+});
+$.getJSON("/most/views.json", function (gifs) {
+  for (var i=0; i<4 && i<gifs.length; i++) {
+    $(".most-viewed-gifs .row").append(createGifTile(gifs[i]));
+  }
+  if (gifs.length >= 4) {
+    $(".most-viewed-gifs").show();
   }
 });
 </script>
