--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -28,6 +28,7 @@
     <div class="row">
       <div class="col-md-9">
         <a href="/" class="logo hidden-xs hidden-sm"><img src="/images/logo.png" /></a>
+        <a href="https://twitter.com/doge_js" class="logo-link hidden-xs hidden-sm">by @doge_js</a>
         <a href="/" class="logo visible-xs visible-sm"><img src="/images/logo.png" style="width: 100%;" /></a>
       </div>
       <div class="col-md-3 hidden-sm hidden-xs">
