--- a/public/css/style.css
+++ b/public/css/style.css
@@ -43,19 +43,13 @@ h1, h2, h3, h4 {
 }
 
 .container-header .caption {
-  -x-float: right;
-  -x-text-align: center;
-  -x-background-color: #ECF0F1;
-  -x-border-radius: 0.5em;
-  -x-margin: 0;
-  -x-padding: 0 1em 1em 1em;
 }
 .container-header .caption h2 {
-  margin: 0.1em 0 0 0;
+  margin: 0.3em 0 0 0;
   line-height: 80%;
 }
 .container-header .caption p {
-  margin: 0;
+  margin: 0 0 0.4em 0;
   text-align: center;
 }
 
